<resources>
    <string name="app_name">WineUp</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="main_title">Главная</string>
    <string name="catalog_title">Каталог</string>
    <string name="favorites_title">Избранное</string>
    <string name="profile_title">Профиль</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="sort_fragment">Сортировать по...</string>
    <string name="expert_assessment">Оценка экспертов:</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="left_image_description">leftImage</string>
    <string name="wine_item_description">%1$s, %2$s, %3$s, %4$s</string>
    <string name="wine_item_relevance">Подходит вам на %1$d%%</string>
    <string name="wine_item_price"><s>%1$.2f ₽  </s></string>
    <string name="wine_item_volume">%.2fл.</string>
    <string name="wine_item_discount">-%1$d%%</string>
    <string name="wine_item_year">%1$d г.</string>
    <string name="hint_search">Поиск..</string>
    <string name="filter_price">Цена:</string>
    <string name="from_price">От</string>
    <string name="to_price">До</string>
    <string name="item_with_discount">Товары со скидкой</string>
    <string name="to1500">До 1500</string>
    <string name="filter_confirm">Применить</string>
    <string name="filter_color">Цвет:</string>
    <string name="filter_reset"><u>Сбросить</u></string>
    <string name="filter_white_wine">Белое</string>
    <string name="filter_red_wine">Красное</string>
    <string name="filter_pink_wine">Розовое</string>
    <string name="filter_apply">Применить</string>
    <string name="filter_countries">Страна:</string>
    <string name="recommended">Рекомендованное:</string>
    <string name="recommend">Наиболее вам подходящие</string>
    <string name="by_rating">По рейтингу</string>
    <string name="by_recommendation">По рекомендации</string>
    <string name="filter_dry_wine">Сухое</string>
    <string name="filter_semi_dry_wine">Полусухое</string>
    <string name="filter_semi_sweet_wine">Полусладкое</string>
    <string name="filter_sweet_wine">Сладкое</string>
    <string name="phoneNumberTestInformation"><b>Введите номер</b> телефона для авторизации</string>
    <string name="whineUp">WhineUp</string>
    <string name="enterPhoneNumber">+7 (9XX) XXX-XX-XX</string>
    <string name="authButton">Войти</string>
    <string name="withoutAuthButton"><u>Продолжить без авторизации</u></string>
    <string name="enter_code">Введите код подтверждения</string>
    <string name="back">&#8592; Вернуться назад</string>
    <string name="wrong_code">&#10005; Код введен <b>неверно</b></string>
    <string name="resend_code">Отправить повторно</string>
    <string name="timer_test"><u>Отправить повторно через %1$s c</u></string>

    <string name="wineup">WineUp</string>
    <string name="age_err_1">Спасибо за честный ответ!</string>
    <string name="age_err_2">К сожалению наше приложение содержит информацию, <b>не предназначенную</b> для лиц младше 18 лет</string>
    <string name="age_err_3">Вернуться назад</string>
    <string name="age_access_1">Добро пожаловать!</string>
    <string name="age_access_2">Вам уже исполнилось 18?</string>
    <string name="age_access_3">&#10004; Да!</string>
    <string name="age_access_4">&#10005; Нет</string>
    <string name="data_enter">Введите данные</string>
    <string name="birth_date">Введите дату рождения</string>
    <string name="date_format">03 05 1996</string>
    <string name="name">Введите ваше имя</string>
    <string name="example_name">Мария Павловна</string>
    <string name="city">Выберите ваш город</string>
    <string name="example_city">Москва</string>
    <string name="agreement">Даю согласие на <u>обработку персональных данных</u></string>
    <string name="enter">Войти</string>
    <string name="sort_by">Сортировать по</string>
    <string name="format_error">*Формат от 2 до 15 букв, не содержащих символов</string>
    <string name="by_recommend">По рекомендации</string>
    <string name="ascendingPrice">По возрастанию цены</string>
    <string name="descendingPrice">По убыванию цены</string>
    <string name="search_in_favorite">Поиск по избранному</string>
    <string name="clear_favorite_underlined"><u>Очистить избранное</u></string>
    <string name="by_price_min">По возрастанию цены</string>
    <string name="by_price_max">По убыванию цены</string>
    <string name="clear_alert_title">Вы уверены, что хотите очистить избранное?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="price">Стоимость:</string>
    <string name="sugare_filter_name">Содержание сахара:</string>
    <string name="favorites_nothing_found">Совпадений не найдено</string>
    <string name="favorites_empty_title">Тут пока пусто</string>
    <string name="favorites_empty_subtitle">Наш каталог поможет Вам\nчто-нибудь найти..</string>
    <string name="button_to_catalog">Перейти в каталог</string>
    <string name="code_sample">Например: 234 564</string>
    <string name="counter_resend_code"><u>Отправить повторно через 59</u></string>
    <string name="swipe_prompt">Листайте..</string>
    <string name="below">До:</string>
    <string name="all_filters_button">Все фильтры</string>
    <string name="dop_param"><u>Доп. параметры</u></string>
    <string name="feedback">Отзывы</string>
    <string name="name_feedback">Марков Павел</string>
    <string name="more_feedback">Больше отзывов</string>
    <string name="log_out_alert">Вы уверены, что хотите выйти из аккаунта?</string>
    <string name="global_yes">Да</string>
    <string name="global_no">Нет</string>
    <string name="profile_exit"><u>Выйти из аккаунта</u></string>
    <string name="profile_edit">Редактировать профиль</string>
    <string name="phone_number_hint">Номер телефона:</string>
    <string name="geo_hint">Город:</string>
    <string name="Moscow">Москва</string>
    <string name="Spb">Санкт-Петербург</string>

    <string name="non_auth_alert">Вы ещё не вошли в аккаунт</string>
    <string name="auth">Войти в аккаунт</string>
    <string name="similar">Мы подобрали для вас схожие вина:</string>
    <string name="to_shop">В магазин</string>
    <string name="linking_phone_number">Вы уверены, что хотите привязать <b>другой номер телефона</b>?</string>
    <string name="change_info_alert">Вы уверены, что хотите изменить данные о себе?</string>
    <string name="alert_dialog_success">Изменения успешно сохранены</string>
    <string name="resend"><u>Отправить повторно</u></string>
    <string name="incorrect_code">Код введён неверно</string>
    <string name="enter_confirmation_code">Введите код подтверждения</string>
    <string name="confirm">Подтвердить</string>
    <string name="resend_in">Отправить повторно через 0 с</string>
    <string name="name2">Имя:</string>
    <string name="phone_number">Номер телефона:</string>
    <string name="city2">Город:</string>
    <string name="save_changes">Сохранить изменения</string>
    <string name="Error">Ошибка</string>
    <string name="error_503">503</string>
    <string name="description_503">В настоящее время сервер недоступен <br>из-за технического обслуживания</br></string>
    <string name="go_to_main_page">Перейти на главную страницу</string>
    <string name="error_404">404</string>
    <string name="description_404">Страница не найдена. <br>Ссылка на эту страницу</br> <br>может быть неверной или уставревшей.</br></string>
    <string name="page_not_found">Страница не найдена</string>
    <string name="page_not_found_exception">Ссылка на эту страницу <br> может быть неверной или устаревшей</br></string>
    <string name="go_back">Вернуться назад</string>

</resources>
