<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/app_name"
        android:textSize="60sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/wrong_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:text="@string/wrong_code"
        android:textColor="@color/button_background_enabled"
        android:textSize="15sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_name" />


    <TextView
        android:id="@+id/enter_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/enter_code"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wrong_code" />

    <EditText
        android:id="@+id/code_edit_text"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:inputType="number"
        android:maxLength="6"
        android:backgroundTint="@color/button_background_enabled"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enter_code" />

    <Button
        android:id="@+id/enter_button"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginTop="40dp"
        android:background="@color/button_background_disabled"
        android:enabled="false"
        android:text="@string/enter"
        android:textColor="@color/button_background_enabled"
        app:layout_constraintCircleRadius="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/code_edit_text" />

    <Button
        android:id="@+id/button_resend_code"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:background="@color/button_background_disabled"
        android:enabled="false"
        android:text="@string/resend_code"
        android:textColor="@color/button_background_enabled"
        app:layout_constraintCircleRadius="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enter_button" />

    <TextView
        android:id="@+id/timer_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_resend_code"
        tools:text="Отправить повторно через 59с" />

    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="40dp"
        android:background="@color/button_background_enabled"
        android:text="@string/back"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintCircleRadius="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>