<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <ImageView
        android:id="@+id/error_503_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.1"
        android:scaleY="1.2"
        android:scaleX="1.2"
        android:translationX="20dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Error"
        android:textSize="25dp"
        android:textStyle="bold"
        android:layout_marginStart="140dp"
        android:layout_marginEnd="140dp"
        android:layout_marginTop="72dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/error_503"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error_503"
        android:textSize="60dp"
        android:textStyle="bold"
        android:layout_marginStart="140dp"
        android:layout_marginEnd="140dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/ic_cancel"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_cancel"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintStart_toEndOf="@id/title"
        app:layout_constraintBottom_toTopOf="@+id/error_503"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/description_503"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description_503"
        android:textStyle="normal"
        android:textSize="16dp"
        android:textAlignment="center"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/error_503"/>

    <Button
        android:id="@+id/button_back"
        android:layout_width="168dp"
        android:layout_height="wrap_content"
        android:background="@drawable/go_back_button_border"
        android:text="@string/age_err_3"
        android:textColor="@color/red"
        android:textAllCaps="false"
        android:padding="4dp"
        android:textSize="14sp"
        android:layout_marginTop="52dp"
        app:layout_constraintCircleRadius="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description_503"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/withoutAuthButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:text="@string/go_to_main_page"
        android:textColor="@color/red"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_back" />

</androidx.constraintlayout.widget.ConstraintLayout>