<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_10"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/sort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:layout_margin="24dp"
                android:text="@string/sort_fragment"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <CheckBox
                android:id="@+id/byRecommendCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="12dp"
                android:paddingStart="20dp"
                android:paddingEnd="40dp"
                android:checked="true"
                android:text="@string/by_recommend"
                android:theme="@style/CheckBox"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sort" />

            <CheckBox
                android:id="@+id/byRatingCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="12dp"
                android:paddingStart="20dp"
                android:paddingEnd="40dp"
                android:text="@string/by_rating"
                android:theme="@style/CheckBox"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/byRecommendCheckbox"/>

            <CheckBox
                android:id="@+id/ascendingPriceCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="12dp"
                android:paddingStart="20dp"
                android:paddingEnd="40dp"
                android:text="@string/ascendingPrice"
                android:theme="@style/CheckBox"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/byRatingCheckbox"

            <CheckBox
                android:id="@+id/descendingPriceCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="60dp"
                android:paddingStart="20dp"
                android:paddingEnd="40dp"
                android:text="@string/descendingPrice"
                android:theme="@style/CheckBox"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ascendingPriceCheckbox"
                app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>