<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="250dp">


        <TextView
            android:id="@+id/linking_phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="46dp"
            android:layout_marginStart="26dp"
            android:layout_marginEnd="26dp"
            android:text="@string/linking_phone_number"
            android:textSize="20sp"
            android:textStyle="italic"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <Button
            android:id="@+id/buttonYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="48dp"
            android:background="@color/button_red"
            android:text="@string/age_access_3"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linking_phone_number" />

        <Button
            android:id="@+id/buttonNo"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="100dp"
            android:layout_marginTop="48dp"
            android:background="@color/button_red"
            android:text="@string/age_access_4"
            android:textSize="14sp"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linking_phone_number" />

</androidx.constraintlayout.widget.ConstraintLayout>