<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_10"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/sugar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@string/sugare_filter_name"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/resetButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:layout_marginTop="8dp"
                android:text="@string/filter_reset"
                android:textColor="#833B4E"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <CheckBox
                android:id="@+id/dryWineCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/CheckBox"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:layout_marginStart="18dp"
                android:text="@string/filter_dry_wine"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sugar" />

            <View
                android:id="@+id/view1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginTop="12dp"
                android:background="@color/black_10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dryWineCheckBox"/>

            <CheckBox
                android:id="@+id/semiDryWineCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/CheckBox"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:layout_marginStart="18dp"
                android:text="@string/filter_semi_dry_wine"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view1" />

            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginTop="12dp"
                android:background="@color/black_10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/semiDryWineCheckBox"/>

            <CheckBox
                android:id="@+id/semiSweetWineCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/CheckBox"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:layout_marginStart="18dp"
                android:text="@string/filter_semi_sweet_wine"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view2" />

            <View
                android:id="@+id/view3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginTop="12dp"
                android:background="@color/black_10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/semiSweetWineCheckBox"/>

            <CheckBox
                android:id="@+id/sweetWineCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/CheckBox"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:layout_marginStart="18dp"
                android:text="@string/filter_sweet_wine"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view3" />

            <Button
                android:id="@+id/confirmButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:text="@string/filter_confirm"
                android:textColor="@color/white"
                android:background="@drawable/rounded_btn"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sweetWineCheckBox" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
